--- a/knotes.cabal
+++ b/knotes.cabal
@@ -38,6 +38,10 @@ executable knotes-exe
                      , free
                      , binary
                      , cryptonite
+                     , transformers
+                     , cereal
+                     , string-conversions
+                     , aeson
   default-language:    Haskell2010
 
 test-suite knotes-test
